--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -18,6 +18,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
+            <ImageView
+                android:id="@+id/movie_poster_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"/>
             <TextView
                 android:id="@+id/title_textView"
                 android:layout_width="wrap_content"
