--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
+                android:textAppearance="?attr/textAppearanceHeadline4" />
             <TextView
                 android:id="@+id/author_textView"
                 android:layout_width="match_parent"
@@ -43,7 +43,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_marginBottom="16dp" />
+            <TextView
+                android:id="@+id/genres_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceHeadline5"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
