--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -25,6 +25,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/movie_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"/>
             <TextView
                 android:id="@+id/title_textView"
                 android:layout_width="match_parent"
