--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -18,11 +18,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
-            <ImageView
-                android:id="@+id/movie_poster_imageView"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:scaleType="centerCrop"/>
+                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/movie_poster_imageView"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    app:srcCompat="@mipmap/ic_launcher"
+                    app:layout_constraintDimensionRatio="H,9:16"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                 android:id="@+id/title_textView"
                 android:layout_width="wrap_content"
@@ -30,33 +41,6 @@
                 android:layout_margin="8dp"
                 tools:text="Morbi congue diam eu magna"
                 android:textAppearance="?attr/textAppearanceHeadline6"/>
-            <TextView
-                android:id="@+id/author_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                tools:text="Kerri Ferguson"
-                android:textAppearance="?attr/textAppearanceBody2"/>
-            <TextView
-                android:id="@+id/summary_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginStart="8dp"
-                tools:text="Donec dictum ligula purus, ut suscipit arcu cursus ut."
-                android:textAppearance="?attr/textAppearanceBody2"/>
-            <TextView
-                android:id="@+id/date_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginStart="8dp"
-                tools:text="9/8/2020"
-                android:textAppearance="?attr/textAppearanceBody1"/>
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
